tests/invalid/ho_type_mode_bug.err_exp
ho_type_mode_bug.m:029: In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:029:   in, in, out, di, uo)':
ho_type_mode_bug.m:029:   mode error in conjunction. The next 4 error messages
ho_type_mode_bug.m:029:   indicate possible causes of this error.
ho_type_mode_bug.m:029:   
ho_type_mode_bug.m:028:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:028:   in, in, out, di, uo)':
ho_type_mode_bug.m:028:   in argument 1 (i.e. the predicate term) of
ho_type_mode_bug.m:028:   higher-order predicate call:
ho_type_mode_bug.m:028:   mode error: variable `P' has instantiatedness
ho_type_mode_bug.m:028:   `(pred(in, in, out) is det)',
ho_type_mode_bug.m:028:   expecting higher-order pred inst of arity 5.
ho_type_mode_bug.m:029:   
ho_type_mode_bug.m:029:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:029:   in, in, out, di, uo)':
ho_type_mode_bug.m:029:   in call to predicate `ho_type_mode_bug.my_foldl2'/6:
ho_type_mode_bug.m:029:   mode error: arguments
ho_type_mode_bug.m:029:   `P, T, FirstAcc1, FirstAcc, SecAcc1, SecAcc' have the
ho_type_mode_bug.m:029:   following insts:
ho_type_mode_bug.m:029:     (pred(in, in, out) is det),
ho_type_mode_bug.m:029:     ground,
ho_type_mode_bug.m:029:     free,
ho_type_mode_bug.m:029:     free,
ho_type_mode_bug.m:029:     free,
ho_type_mode_bug.m:029:     free
ho_type_mode_bug.m:029:   which does not match any of the modes for predicate
ho_type_mode_bug.m:029:   `ho_type_mode_bug.my_foldl2'/6.
ho_type_mode_bug.m:029:   The first argument `P' has inst
ho_type_mode_bug.m:029:   `(pred(in, in, out) is det)', which does not match
ho_type_mode_bug.m:029:   any of those modes.
ho_type_mode_bug.m:029:   (For higher order insts like this, the mismatch is
ho_type_mode_bug.m:029:   sometimes caused by the arity of the predicate or
ho_type_mode_bug.m:029:   function being different in the inst than in the
ho_type_mode_bug.m:029:   type.)
ho_type_mode_bug.m:029:   The third argument `FirstAcc1' has inst `free', which
ho_type_mode_bug.m:029:   does not match any of those modes.
ho_type_mode_bug.m:029:   The fifth argument `SecAcc1' has inst `free', which
ho_type_mode_bug.m:029:   does not match any of those modes.
ho_type_mode_bug.m:029:   
ho_type_mode_bug.m:027:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:027:   in, in, out, di, uo)':
ho_type_mode_bug.m:027:   in argument 4 of clause head:
ho_type_mode_bug.m:027:   mode error in unification of `HeadVar__4' and
ho_type_mode_bug.m:027:   `FirstAcc'.
ho_type_mode_bug.m:027:   Variable `HeadVar__4' has instantiatedness `free',
ho_type_mode_bug.m:027:   variable `FirstAcc' has instantiatedness `free'.
ho_type_mode_bug.m:029:   
ho_type_mode_bug.m:027:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:027:   in, in, out, di, uo)':
ho_type_mode_bug.m:027:   in argument 6 of clause head:
ho_type_mode_bug.m:027:   mode error in unification of `HeadVar__6' and
ho_type_mode_bug.m:027:   `SecAcc'.
ho_type_mode_bug.m:027:   Variable `HeadVar__6' has instantiatedness `free',
ho_type_mode_bug.m:027:   variable `SecAcc' has instantiatedness `free'.
ho_type_mode_bug.m:029: In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:029:   in, in, out, in, out)':
ho_type_mode_bug.m:029:   mode error in conjunction. The next 4 error messages
ho_type_mode_bug.m:029:   indicate possible causes of this error.
ho_type_mode_bug.m:029:   
ho_type_mode_bug.m:028:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:028:   in, in, out, in, out)':
ho_type_mode_bug.m:028:   in argument 1 (i.e. the predicate term) of
ho_type_mode_bug.m:028:   higher-order predicate call:
ho_type_mode_bug.m:028:   mode error: variable `P' has instantiatedness
ho_type_mode_bug.m:028:   `(pred(in, in, out) is det)',
ho_type_mode_bug.m:028:   expecting higher-order pred inst of arity 5.
ho_type_mode_bug.m:029:   
ho_type_mode_bug.m:029:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:029:   in, in, out, in, out)':
ho_type_mode_bug.m:029:   in call to predicate `ho_type_mode_bug.my_foldl2'/6:
ho_type_mode_bug.m:029:   mode error: arguments
ho_type_mode_bug.m:029:   `P, T, FirstAcc1, FirstAcc, SecAcc1, SecAcc' have the
ho_type_mode_bug.m:029:   following insts:
ho_type_mode_bug.m:029:     (pred(in, in, out) is det),
ho_type_mode_bug.m:029:     ground,
ho_type_mode_bug.m:029:     free,
ho_type_mode_bug.m:029:     free,
ho_type_mode_bug.m:029:     free,
ho_type_mode_bug.m:029:     free
ho_type_mode_bug.m:029:   which does not match any of the modes for predicate
ho_type_mode_bug.m:029:   `ho_type_mode_bug.my_foldl2'/6.
ho_type_mode_bug.m:029:   The first argument `P' has inst
ho_type_mode_bug.m:029:   `(pred(in, in, out) is det)', which does not match
ho_type_mode_bug.m:029:   any of those modes.
ho_type_mode_bug.m:029:   (For higher order insts like this, the mismatch is
ho_type_mode_bug.m:029:   sometimes caused by the arity of the predicate or
ho_type_mode_bug.m:029:   function being different in the inst than in the
ho_type_mode_bug.m:029:   type.)
ho_type_mode_bug.m:029:   The third argument `FirstAcc1' has inst `free', which
ho_type_mode_bug.m:029:   does not match any of those modes.
ho_type_mode_bug.m:029:   The fifth argument `SecAcc1' has inst `free', which
ho_type_mode_bug.m:029:   does not match any of those modes.
ho_type_mode_bug.m:029:   
ho_type_mode_bug.m:027:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:027:   in, in, out, in, out)':
ho_type_mode_bug.m:027:   in argument 4 of clause head:
ho_type_mode_bug.m:027:   mode error in unification of `HeadVar__4' and
ho_type_mode_bug.m:027:   `FirstAcc'.
ho_type_mode_bug.m:027:   Variable `HeadVar__4' has instantiatedness `free',
ho_type_mode_bug.m:027:   variable `FirstAcc' has instantiatedness `free'.
ho_type_mode_bug.m:029:   
ho_type_mode_bug.m:027:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:027:   in, in, out, in, out)':
ho_type_mode_bug.m:027:   in argument 6 of clause head:
ho_type_mode_bug.m:027:   mode error in unification of `HeadVar__6' and
ho_type_mode_bug.m:027:   `SecAcc'.
ho_type_mode_bug.m:027:   Variable `HeadVar__6' has instantiatedness `free',
ho_type_mode_bug.m:027:   variable `SecAcc' has instantiatedness `free'.
